# intelligent_reasoning_assistant_v1_crewai-project

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/intelligent_reasoning_assistant/: crew.py  main.py
src/intelligent_reasoning_assistant/config/: agents.yaml  tasks.yaml
