[project]
name = "intelligent_reasoning_assistant"
version = "0.1.0"
description = "intelligent_reasoning_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
intelligent_reasoning_assistant = "intelligent_reasoning_assistant.main:run"
run_crew = "intelligent_reasoning_assistant.main:run"
train = "intelligent_reasoning_assistant.main:train"
replay = "intelligent_reasoning_assistant.main:replay"
test = "intelligent_reasoning_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
